--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -111,7 +111,7 @@
     ]
   },
   "sidebar": {
-    "title": "Creative Tim",
+    "title": "Guard",
     "shortTitle": "CT",
     "dashboard": "dashboard"
   }
